// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render correctly 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="content-padding"
    >
      <img
        class="logo"
        src="./assets/McK_Logo.png"
      />
      <div
        class="navbar"
      >
        <button
          class="nav-button"
        >
          Engagements
        </button>
        <button
          class="nav-button"
        >
          People
        </button>
        <button
          class="nav-button"
        >
          Case Studies
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render correctly with a navbar when Navbar boolean is true 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="content-padding"
    >
      <img
        class="logo"
        src="./assets/McK_Logo.png"
      />
      <div
        class="navbar"
      >
        <button
          class="nav-button"
        >
          Engagements
        </button>
        <button
          class="nav-button"
        >
          People
        </button>
        <button
          class="nav-button"
        >
          Case Studies
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Header should render correctly without a navbar when Navbar boolean is false 1`] = `
<DocumentFragment>
  <div
    class="header"
  >
    <div
      class="content-padding"
    >
      <img
        class="logo"
        src="./assets/McK_Logo.png"
      />
    </div>
  </div>
</DocumentFragment>
`;
